tekton/istio-routing.yaml
apiVersion: istio.io/v1
kind: Gateway
metadata:
  name: tekton-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
